--- a/NoteModelLib/App.config
+++ b/NoteModelLib/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="myNoteDb" connectionString="data source=(LocalDb)\MSSQLLocalDB;initial catalog=myNoteDb;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="myNoteDb" connectionString="data Source=localhost;Initial Catalog=myNoteDb;Integrated Security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
